Projet GL/Projet_GL/src/test/deca/context/invalid/increment6/new-bad-type.deca
// Test rule 3.42 New int

class A{
    int a;
}

{
    int b;
    int c = New int;
}